# proginfo

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  settings.toml.tpl
proginfo/: __main__.py  config.py  data.py  log.py
