[project]
name = "proginfo"
description = "Current program info for omnia streams in description field"
version = "0.1.0"
dependencies = [
    "attrs",
    "omniapy@git+https://github.com/alex-berlin-tv/omniapy.git",
    "pydantic",
    "requests",
    "typed-settings==23.0.1"
]

[tool.setuptools]
packages = ["proginfo"]

[project.scripts]
proginfo = "proginfo:__main__.app"